# litelineage

./: .gitignore  README.md  generate_lineage_data.py  pyproject.toml
litelineage/: __init__.py  core.py  visualizer.py
litelineage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
